removed horizontal and vertical spaces while entering on the Laptop web browser

--- a/Week-1/New_Websit.html
+++ b/Week-1/New_Websit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
- 
+
 <body>
     <nav id="navbar">
         <ul class="navbar-nav">
@@ -27,7 +27,7 @@
     <div class="main-content">
         <div class="main">
             <img class="img" src="cattyboard.jpg" width="200">
-            <div id="section-chart" >
+            <div id="section-chart">
                 <h2>CattyBoard Top 100 Single Charts (11.06.36)</h2>
                 <h3>Unknown Artist</h3>
                 <h3>2016. Charts. 100 Songs</h3>
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="chartlist">
             <table class="even">
                 <tr>
                     <td>1. One dance</td>
@@ -66,10 +66,9 @@
                 </tr>
             </table>
         </div>
-       
     </div>
     <footer id="footer">
-        <img  class="img2" src="cattyboard.jpg" width="100">
+        <img class="img2" src="cattyboard.jpg" width="100">
         <div>
             <ul>
                 <li class="song">If it Ain't Love</li>
@@ -78,13 +77,11 @@
             <div class="play">
                 <span class="la la-step-backward" id="box1"></span>
                 <span class="la la-pause" id="box2"></span>
-                <span class="la la-step-forward"  id="box2"></span>
+                <span class="la la-step-forward" id="box2"></span>
                 <span class="la la-undo-alt" id="box2"></span>
                 <span class="la la-random" id="box2"></span>
             </div>
         </div>
     </footer>
 </body>
- 
 </html>
-
