semantics tags updated

--- a/Week-2/index.html
+++ b/Week-2/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <div class="container">
-        <div class="sidebar">
-            <div class="sidebar_head">
+        <nav class="sidebar">
+            <section class="sidebar__head">
                 <a href="#"><h3>Home</h3></a>
                 <a href="#"><h3>Home</h3></a>
                 <a href="#"><h3>Home</h3></a>
                 <a href="#"><h3>Home</h3></a>
                 <a href="#"><h3>Home</h3></a>
-            </div> 
-        </div>
+            </section> 
+        </nav>
         <div class="content">
             <nav class="navbar">
                 <a class="but" href="#">Home</a>
@@ -28,8 +28,8 @@
     
             </nav>
 
-            <div class="block">
-                <div class="main">
+            <section class="block">
+                <article class="main">
                     <h2>What is Lorem Ipsum?</h2>
                     <p>
                         Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
@@ -45,8 +45,8 @@
                         Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in
                         their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
                     </p>
-                </div>
-                <div class="cont">
+                </article>
+                <article class="cont">
                     <div class="cont1">
                         <h2>
                             What is Lorem Ipsum?
@@ -75,7 +75,7 @@
                             Lorem Ipsum.
                         </p>
                     </div>
-                </div>
+                </article>
                 <form>
                     <label for="title">Title:</label>
                     <input type="radio" name="title">Mr.
@@ -95,7 +95,7 @@
                     <input type="text" name="cnfpassword"><br>
                     <input type="submit">
                 </form>
-            </div>
+            </section>
             <footer>
                 <h2>About me</h2>
                 <p>
