theme and font is updated in the new website

--- a/Week-2/index.html
+++ b/Week-2/index.html
@@ -7,58 +7,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <nav class="sidebar">
             <section class="sidebar__head">
-                <a href="#"><h3>Home</h3></a>
-                <a href="#"><h3>Home</h3></a>
-                <a href="#"><h3>Home</h3></a>
-                <a href="#"><h3>Home</h3></a>
-                <a href="#"><h3>Home</h3></a>
-            </section> 
+                <a href="#">
+                    <h3>Games</h3>
+                </a>
+                <a href="#">
+                    <h3>Anime</h3>
+                </a>
+                <a href="#">
+                    <h3>Movies</h3>
+                </a>
+                <a href="#">
+                    <h3>Tv</h3>
+                </a>
+                <a href="#">
+                    <h3>Video</h3>
+                </a>
+            </section>
         </nav>
         <div class="content">
             <nav class="navbar">
+                <div class="logo">
+                    <img src="Site-logo.webp">
+                </div>
+
                 <a class="but" href="#">Home</a>
                 <a class="but" href="#">Profile</a>
                 <a class="but" href="#">Settings</a>
-    
+
             </nav>
 
             <section class="block">
                 <article class="main">
-                    <h2>What is Lorem Ipsum?</h2>
+                    <h2>What is One Piece?</h2>
                     <p>
-                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
-                        professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
-                        consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical
-                        literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
-                        of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This
-                        book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of
-                        Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-    
-                        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                        Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in
-                        their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                        <b>One Piece</b> is a Japanese manga series written and illustrated by Eiichiro Oda. It has been
+                        serialized in Shueisha's shōnen manga magazine Weekly Shōnen Jump since July 1997, with its
+                        individual chapters compiled into 102 tankōbon volumes as of April 2022. The story follows the
+                        adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after
+                        unintentionally eating a Devil Fruit. With his pirate crew, the Straw Hat Pirates, Luffy
+                        explores the Grand Line in search of the deceased King of the Pirates Gol D Roger's ultimate
+                        treasure known as the "One Piece" in order to become the next King of the Pirates.
+
+                        The manga spawned a media franchise, having been adapted into a festival film produced by
+                        Production I.G, and an anime series produced by Toei Animation, which began broadcasting in
+                        Japan in 1999. Additionally, Toei has developed fourteen animated feature films, one OVA and
+                        thirteen television specials. Several companies have developed various types of merchandising
+                        and media, such as a trading card game and numerous video games. The manga series was licensed
+                        for an English language release in North America and the United Kingdom by Viz Media and in
+                        Australia by Madman Entertainment. The anime series was licensed by 4Kids Entertainment for an
+                        English-language release in North America in 2004, before the license was dropped and
+                        subsequently acquired by Funimation in 2007.
                     </p>
                 </article>
                 <article class="cont">
                     <div class="cont1">
                         <h2>
-                            What is Lorem Ipsum?
+                            Who is Monkey D. Luffy?
                         </h2>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                            but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                            and more recently with desktop publishing software like Aldus PageMaker including versions of
-                            Lorem Ipsum.
+                            Monkey D. Luffy, also known as " Straw Hat Luffy" and commonly as "Straw Hat", is the main protagonist of the manga and anime, One Piece. He is the founder and captain of the increasingly infamous and powerful Straw Hat Pirates, as well as one of its top fighters.His lifelong dream is to become the Pirate King by finding the legendary treasure left
+                            behind by the late Gol D. Roger. He believes that being the Pirate King means having the most freedom in the world. <a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy"> More</a>
                         </p>
                     </div>
                     <div class="cont2">
@@ -66,13 +83,8 @@
                             What is Lorem Ipsum?
                         </h2>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                            but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                            and more recently with desktop publishing software like Aldus PageMaker including versions of
-                            Lorem Ipsum.
+                            Roronoa Zoro, also known as "Pirate Hunter" Zoro, is the combatant of the Straw Hat Pirates, and one of their two swordsmen. Formerly a bounty hunter, he is the second member of Luffy's crew and the first to join it, doing so in the Romance Dawn Arc. As a master of Three Sword Style, a swordsmanship style which he created during his childhood training in Shimotsuki Village, Zoro is among the three most powerful combatants of the Straw Hats, alongside Luffy and Sanji.<a href="https://onepiece.fandom.com/wiki/Roronoa_Zoro?so=search">
+                                More</a>
                         </p>
                     </div>
                 </article>
@@ -99,7 +111,11 @@
             <footer>
                 <h2>About me</h2>
                 <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." 
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum."
                 </p>
             </footer>
         </div>
