--- a/Week-2/index.html
+++ b/Week-2/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>One Piece Wiki</title>
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+
     <div class="container">
         <nav class="sidebar">
             <section class="sidebar__head">
@@ -35,14 +37,14 @@
         </nav>
         <div class="content">
             <nav class="navbar">
-                <div class="logo">
+                <div class="navbar__logo">
                     <img src="Site-logo.webp">
                 </div>
-
-                <a class="but" href="#">Home</a>
-                <a class="but" href="#">Profile</a>
-                <a class="but" href="#">Settings</a>
-
+                <div class="navbar__head">
+                    <a class="but" href="#">Home</a>
+                    <a class="but" href="#">Profile</a>
+                    <a class="but" href="#">Settings</a>
+                </div>
             </nav>
 
             <section class="block">
@@ -74,40 +76,64 @@
                             Who is Monkey D. Luffy?
                         </h2>
                         <p>
-                            Monkey D. Luffy, also known as " Straw Hat Luffy" and commonly as "Straw Hat", is the main protagonist of the manga and anime, One Piece. He is the founder and captain of the increasingly infamous and powerful Straw Hat Pirates, as well as one of its top fighters.His lifelong dream is to become the Pirate King by finding the legendary treasure left
-                            behind by the late Gol D. Roger. He believes that being the Pirate King means having the most freedom in the world. <a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy"> More</a>
+                            Monkey D. Luffy, also known as " Straw Hat Luffy" and commonly as "Straw Hat", is the main
+                            protagonist of the manga and anime, One Piece. He is the founder and captain of the
+                            increasingly infamous and powerful Straw Hat Pirates, as well as one of its top fighters.His
+                            lifelong dream is to become the Pirate King by finding the legendary treasure left
+                            behind by the late Gol D. Roger. He believes that being the Pirate King means having the
+                            most freedom in the world. <a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy">
+                                More</a>
                         </p>
                     </div>
                     <div class="cont2">
                         <h2>
-                            What is Lorem Ipsum?
+                            Who is Roronoa Zoro?
                         </h2>
                         <p>
-                            Roronoa Zoro, also known as "Pirate Hunter" Zoro, is the combatant of the Straw Hat Pirates, and one of their two swordsmen. Formerly a bounty hunter, he is the second member of Luffy's crew and the first to join it, doing so in the Romance Dawn Arc. As a master of Three Sword Style, a swordsmanship style which he created during his childhood training in Shimotsuki Village, Zoro is among the three most powerful combatants of the Straw Hats, alongside Luffy and Sanji.<a href="https://onepiece.fandom.com/wiki/Roronoa_Zoro?so=search">
+                            Roronoa Zoro, also known as "Pirate Hunter" Zoro, is the combatant of the Straw Hat Pirates,
+                            and one of their two swordsmen. Formerly a bounty hunter, he is the second member of Luffy's
+                            crew and the first to join it, doing so in the Romance Dawn Arc. As a master of Three Sword
+                            Style, a swordsmanship style which he created during his childhood training in Shimotsuki
+                            Village, Zoro is among the three most powerful combatants of the Straw Hats, alongside Luffy
+                            and Sanji.<a href="https://onepiece.fandom.com/wiki/Roronoa_Zoro?so=search">
                                 More</a>
                         </p>
                     </div>
                 </article>
                 <form>
-                    <label for="title">Title:</label>
-                    <input type="radio" name="title">Mr.
-                    <input type="radio" name="title">Miss
-                    <input type="radio" name="title">Mrs.<br><br>
-                    <label for="fname">First name:</label>
-                    <input type="text" name="fname"><br>
-                    <label for="lname">Last name:</label>
-                    <input type="text" name="lname"><br>
-                    <label for="phnumber">Phone Number:</label>
-                    <input type="text" name="phnumber"><br>
-                    <label for="mailid">Email:</label>
-                    <input type="email" name="mailid"><br>
-                    <label for="password">Password:</label>
-                    <input type="text" name="password"><br>
-                    <label for="cnfpassword">Confirm Password:</label>
-                    <input type="text" name="cnfpassword"><br>
-                    <input type="submit">
+                    <h2>Join the Community</h2>
+                    <div class="form">
+                        <div class="form_space">
+                            <div class="form__space__l">
+                                <label for="title">Title:</label><br>
+                                <label for="fname">First name:</label><br>
+                                <label for="lname">Last name:</label><br>
+                                <label for="phnumber">Ph Number:</label><br>
+                                <label for="mailid">Email:</label><br>
+                                <label for="password">Password:</label><br>
+                                <label for="cnfpassword">Confirm Password:</label><br>
+                            </div>
+
+                            <div class="form__space__r">
+                                <div>
+                                    <input type="radio" name="title">Mr.
+                                    <input type="radio" name="title">Miss
+                                    <input type="radio" name="title">Mrs.
+                                </div>
+                                <input type="text" name="fname" size="10"><br>
+                                <input type="text" name="lname" size="10"><br>
+                                <input type="phone" name="phnumber" size="10"><br>
+                                <input type="email" name="mailid" size="10"><br>
+                                <input type="password" name="password" size="10"><br>
+                                <input type="password" name="cnfpassword" size="10"><br>
+                            </div>
+                        </div>
+
+
+                        <input type="submit" class="submit">
                 </form>
             </section>
+
             <footer>
                 <h2>About me</h2>
                 <p>
@@ -118,8 +144,8 @@
                     culpa qui officia deserunt mollit anim id est laborum."
                 </p>
             </footer>
-        </div>
 
+        </div>
     </div>
 
 </body>
