Changes made:- 1. File name changed to animation.html. 2. class name .container  added for tag section 3. transform is added in individual color boxes for making them transform back to its original position.

--- a/Week-2/Assignment2.2/animation.html
+++ b/Week-2/Assignment2.2/animation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="container">
         <div class="hi">
             <h1>Hi!</h1>
         </div>
