Following changes are done:- 1. class name changed based on the bem naming convention 2. file name changed to one piece website.

--- a/Week-2/assignment2.1/onepiecewebsit.html
+++ b/Week-2/assignment2.1/onepiecewebsit.html
@@ -41,14 +41,14 @@
                     <img src="images/Site-logo.webp">
                 </div>
                 <div class="navbar__head">
-                    <a class="but" href="#">Home</a>
-                    <a class="but" href="#">Profile</a>
-                    <a class="but" href="#">Settings</a>
+                    <a class="navbar__head__btn" href="#">Home</a>
+                    <a class="navbar__head__btn" href="#">Profile</a>
+                    <a class="navbar__head__btn" href="#">Settings</a>
                 </div>
             </nav>
 
             <section class="block">
-                <article class="main">
+                <article class="block__main">
                     <h2>What is One Piece?</h2>
                     <p>
                         <b>One Piece</b> is a Japanese manga series written and illustrated by Eiichiro Oda. It has been
@@ -70,8 +70,8 @@
                         subsequently acquired by Funimation in 2007.
                     </p>
                 </article>
-                <article class="cont">
-                    <div class="cont1">
+                <article class="block__cont">
+                    <div class="block__cont1">
                         <h2>
                             Who is Monkey D. Luffy?
                         </h2>
@@ -85,7 +85,7 @@
                                 More</a>
                         </p>
                     </div>
-                    <div class="cont2">
+                    <div class="block__cont2">
                         <h2>
                             Who is Roronoa Zoro?
                         </h2>
